@@ -1,3 +1,14 @@
+2010-04-28  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        WebInspector: Timeline: We can have precise urls in the EvaluateScript records.
+        https://bugs.webkit.org/show_bug.cgi?id=38264
+
+        * inspector/front-end/TimelinePanel.js:
+        (WebInspector.TimelinePanel.FormattedRecord.prototype._generatePopupContent):
+        (WebInspector.TimelinePanel.FormattedRecord.prototype._getRecordDetails):
+
 2010-04-28  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
